--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="nav-content">
+            <a href="{{ url_for('index') }}" class="nav-logo">Video Tagger</a>
+            <div class="nav-links">
+                <a href="{{ url_for('index') }}">Home</a>
+                <a href="{{ url_for('add_video') }}">Add Video</a>
+                <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
         <h1>Video Tagger</h1>
         <a href="{{ url_for('add_video') }}" class="button">Add New Video</a>
