--- a/templates/bulk_upload.html
+++ b/templates/bulk_upload.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bulk_upload.css') }}">
 </head>
 <body>
+    <nav class="navbar"></nav>
+        <div class="nav-content">
+            <a href="{{ url_for('index') }}" class="nav-logo">Video Tagger</a>
+            <div class="nav-links">
+                <a href="{{ url_for('index') }}">Home</a>
+                <a href="{{ url_for('add_video') }}">Add Video</a>
+                <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <h1>Bulk Upload Videos</h1>
         <form id="upload-form" enctype="multipart/form-data">
